# aicoachprototyp

./: app.py  create_db.py  pyproject.toml  requirements.txt  web_forms.py
instance/: users.db
templates/: 404.html  500.html  add_post.html  add_user.html  admin.html  base.html  dashboard.html  edit_post.html  index.html  login.html  name.html  navbar.html  post.html  posts.html  search.html  test_pw.html  update.html  user.html
