[tool.poetry]
name = "aicoachprototyp"
version = "0.1.0"
description = "Dashbaord for AI-Coach"
authors = ["Patrick"]

[tool.poetry.dependencies]
[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.3.2"
SQLAlchemy = "^2.0.15"
Flask-Migrate = "^4.0.4"
Flask-SQLAlchemy = "^3.0.3"
Flask-Login = "^0.6.2"
oauthlib = "^3.2.2"
Authlib = "^1.2.0"
Flask-CKEditor = "^0.4.6"
Flask-WTF = "^1.1.1"
WTForms = "^3.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
