[tool.poetry]
name = "aicoachprototyp"
version = "0.1.0"
description = "Dashbaord for AI-Coach"
authors = ["Patrick"]

[tool.poetry.dependencies]
[tool.poetry.dependencies]
alembic==1.11.0
blinker==1.6.2
certifi==2023.5.7
cffi==1.15.1
charset-normalizer==2.0.12
click==8.1.3
colorama==0.4.6
cryptography==40.0.2
Flask==2.2.5
Flask-CKEditor==0.4.6
Flask-Login==0.6.2
Flask-Migrate==4.0.4
Flask-SQLAlchemy==3.0.3
Flask-WTF==1.1.1
greenlet==2.0.2
gunicorn==20.1.0
idna==3.4
itsdangerous==2.1.2
Jinja2==3.1.2
Mako==1.2.4
MarkupSafe==2.1.2
mysql-connector-python==8.0.33
numpy==1.21.6
protobuf==3.20.3
psycopg2==2.9.6
pycparser==2.21
PyMySQL==1.0.3
PyQt5==5.15.9
PyQt5-Qt5==5.15.2
PyQt5-sip==12.12.1
pywinpty==2.0.10
PyYAML==6.0
requests==2.28.0
SQLAlchemy==2.0.13
turtle==0.0.1
typing_extensions==4.5.0
urllib3==1.26.15
Werkzeug==2.3.4
WTForms==3.0.1

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
